Fix footer columns alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -360,13 +360,13 @@
 }
 
 .footer__columns {
-  display: flex;
-  justify-content: space-between;
-  gap: 80px;
+    display: flex;
   margin-bottom: 60px;
 }
 
 .footer__column_content_hours {
+  margin-left: auto;
+  margin-right: 80px;
 }
 
 .footer__column_content_social {
